Closed Bug 379969 Opened 17 years ago Closed 17 years ago

Resizing font doesn't work with new textframe

Categories

(Core :: Graphics, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: smontagu, Assigned: smontagu)

References

Details

Attachments

(1 file)

Resizing the font with Ctrl-- and Ctrl-+ changes the line height, but the font itself doesn't resize.
Attached patch Possible patchSplinter Review
I think we need to blow away mTextRun on a style reflow, possibly like this?
Assignee: nobody → smontagu
Status: NEW → ASSIGNED
Attachment #264047 - Flags: superreview?(roc)
Attachment #264047 - Flags: review?(roc)
Comment on attachment 264047 [details] [diff] [review]
Possible patch

Cool, thanks!
Attachment #264047 - Flags: superreview?(roc)
Attachment #264047 - Flags: superreview+
Attachment #264047 - Flags: review?(roc)
Attachment #264047 - Flags: review+
Checked in
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Flags: in-testsuite?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: