Clear mTextRun on a style change reflow. Bug 379969, r+sr=roc